@@ -1,0 +1,13 @@
+<?php
+
+define('UC_USER', 0);
+define('UC_MIN', 0);
+define('UC_POWER_USER', 1);
+define('UC_VIP', 2);
+define('UC_UPLOADER', 3);
+define('UC_MODERATOR', 4);
+define('UC_STAFF', 4);
+define('UC_ADMINISTRATOR', 5);
+define('UC_SYSOP', 6);
+define('UC_MAX', 6);
+
