@@ -7,7 +7,7 @@ global $CURUSER, $site_config, $cache, $message_stuffs, $mysqli;
 
 check_user_status();
 if ($CURUSER['class'] < MIN_TO_PLAY) {
-    stderr('Error!', 'Sorry, you must be a ' . $class_names[MIN_TO_PLAY] . ' to play in the casino!');
+    stderr('Error!', 'Sorry, you must be a ' . $site_config['class_names'][MIN_TO_PLAY] . ' to play in the casino!');
 }
 
 $lang = array_merge(load_language('global'), load_language('casino'));
